--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="robots" content="all" />
 <meta name="robots" content="index,follow"/>
-<title>404</title>
+<title>MC机械创世-404</title>
 </head>
 <style type="text/css">
 .me404 {
