--- a/plugins.html
+++ b/plugins.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MC机械创世</title>
-    <link rel="shortcut icon" href="favicon.ico">
+<link rel="shortcut icon" href=" /favicon.ico" />
     <script src="js/jquery.min_1.js"></script>
     <script src="js/bootstrap.min_1.js"></script>
     <link href="css/bootstrap.min_1.css" rel="stylesheet">
