--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <section class="container-fluid" id="welcome">
         <div class="container text-center">
             <div class="row">
-                <div class="col-md-12"><img src="picture/fwqlogo.jpg" class="img-responsive mclogo" /><img
-                        src="picture/title.png" class="img-responsive logo" /></div>
+                <div class="col-md-12"><img src="picture/机械创世素材logo.png" class="img-responsive mclogo" /><img
+                        src="picture/jxcstitle.png" class="img-responsive logo" /></div>
             </div>
             <div class="row buttons2">
                 <div class="col-md-2 col-xs-6 col-md-offset-1"><a href="#qqgroup" role="gun"
