--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <link href="css/buttons.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <style>
+        .aligncenter {
+    clear: both;
+    display: block;
+    margin: auto;
+}
+</style>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-nav">
@@ -36,8 +43,8 @@
     <section class="container-fluid" id="welcome">
         <div class="container text-center">
             <div class="row">
-                <div class="col-md-12"><img src="picture/机械创世素材logo.png" class="img-responsive mclogo" /><img
-                        src="picture/jxcstitle.png" class="img-responsive logo" /></div>
+                <div class="col-md-12"><img src="picture/机械创世素材logo.png" class="img-responsive mclogo" class="aligncenter"/><img
+                        src="picture/jxcstitle.png" class="img-responsive logo" class="aligncenter" /></div>
             </div>
             <div class="row buttons2">
                 <div class="col-md-2 col-xs-6 col-md-offset-1"><a href="#qqgroup" role="gun"
