--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="container-fluid" id="welcome">
         <div class="container text-center">
             <div class="row">
-                <div class="col-md-12"><img src="picture/机械创世素材logo.png" class="img-responsive mclogo" class="aligncenter"/><img
+                <div class="col-md-12"><img src="picture/机械创世素材logo.png" class="img-responsive mclogo" class="aligncenter"/></br><img
                         src="picture/jxcstitle.png" class="img-responsive logo" class="aligncenter" /></div>
             </div>
             <div class="row buttons2">
