--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <section class="container-fluid" id="welcome">
         <div class="container text-center">
             <div class="row">
-                <div class="col-md-12"><img src="picture/机械创世素材logo.png" class="img-responsive mclogo" class="aligncenter"/></br><img
-                        src="picture/jxcstitle.png" class="img-responsive logo" class="aligncenter" /></div>
+                <div class="col-md-12"><img src="picture/logo.png" class="img-responsive mclogo" class="aligncenter" height="200px" width="200px"/></br><img
+                        src="picture/jxcstitle.png" class="img-responsive logo" class="aligncenter" height="761px" width="3908px"/></div>
             </div>
             <div class="row buttons2">
                 <div class="col-md-2 col-xs-6 col-md-offset-1"><a href="#qqgroup" role="gun"
