--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="container-fluid" id="welcome">
         <div class="container text-center">
             <div class="row">
-                <div class="col-md-12"><img src="picture/logo.png" class="img-responsive mclogo" class="aligncenter" height="200px" width="200px"/></br><img
+                <div class="col-md-12"><img src="picture/logo(已去底).png" class="img-responsive mclogo" class="aligncenter" height="100px" width="100px"/></br><img
                         src="picture/jxcstitle.png" class="img-responsive logo" class="aligncenter"/></div>
             </div>
             <div class="row buttons2">
