Update and rename server_rule.html to web/server_rule.html

--- a/web/server_rule.html
+++ b/web/server_rule.html
@@ -1,16 +1,10 @@
-<!--任何人未经允许，禁止盗用本服官网。-->
+
 <html lang=cn>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="baidu-site-verification" content="drcGN8jpX0" />
-    <title>服务器玩家规定-规则规定-Minecraft史蒂夫的奇妙冒险-Minecraft服务器,史蒂夫的奇妙冒险,MOD教程</title>
-    <meta name="keywords"
-        content="服务器玩家规定,规则规定,史蒂夫的奇妙冒险,Minecraft史蒂夫的奇妙冒险,史蒂夫的奇妙冒险服务器,Minecraft史蒂夫的奇妙冒险,史蒂夫的奇妙冒险,mc服务器,我的世界服务器,我的世界史蒂夫的奇妙冒险,minecraft服务器" />
-    <meta name="description"
-        content="  	禁止未经其他玩家同意拆除其他玩家建筑。  	禁止拆除服务器内公共设施、活动场所等管理组建立的建筑物。  	禁止使用任何手段使服务器卡顿。  	禁止恶意PVP。  	箱子必须使用原版木牌子上锁，否则造成的损失 Minecraft蓝翼宝贝是一个主打可玩性的服务器。" />
-    <meta name="author" content="史蒂夫的奇妙冒险工作室" />
+    <title>MC机械创世-server_rule</title>
     <link rel="shortcut icon" href="favicon.ico">
     <script src="js/jquery.min_6.js"></script>
     <script src="js/bootstrap.min_6.js"></script>
@@ -26,14 +20,14 @@
             <div class="navbar-header"><button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#navlist" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span
                         class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a
-                    class="navbar-brand" href="/" role="gun">MC史蒂夫的奇妙冒险</a></div>
+                    class="navbar-brand" href="/" role="gun">MC机械创世</a></div>
             <div class="collapse navbar-collapse" id="navlist">
                 <ul class="nav navbar-nav" role="tablist">
                     <li class="nav-item"><a class="nav-link" href="/">首页</a></li>
                     <li class="nav-item"><a class="nav-link" href="/articleList">最新动态</a></li>
                     <li class="nav-item"><a class="nav-link" href="/#clogin">客户端</a></li>
                     <li class="nav-item"><a class="nav-link" href="/#qqgroup">加入QQ群</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/mod">模组</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/plugins.html">插件</a></li>
                     <li class="nav-item"><a class="nav-link" href="/tese">特色</a></li>
                 </ul>
             </div>
@@ -53,13 +47,13 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <h3>服务器玩家规定</h3>
-                    <p>写于<b>0个月前(12-04)</b></p>
+                    <p>于<b>2023/1/20成立</b></p>
                     <hr>
                     </hr>
                 </div>
                 <div class="col-md-12 font">
                     <ol>
-                        <li>禁止未经其他玩家同意拆除其他玩家建筑。</li>
+                        <li>禁止发送&泄露成员隐私信息：包括但不限于，群内成员的电话号码/身份证号/照片等。</li>
                         <li>禁止拆除服务器内公共设施、活动场所等管理组建立的建筑物。</li>
                         <li>禁止使用任何手段使服务器卡顿。</li>
                         <li>禁止恶意PVP。</li>
