--- a/chat_rule.html
+++ b/chat_rule.html
@@ -1,22 +1,17 @@
-<!--Copyright(C)史蒂夫的奇妙冒险工作室任何人未经允许，禁止盗用本服官网。-->
+
 <html lang=cn>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="baidu-site-verification" content="drcGN8jpX0" />
-    <title>世界-Minecraft蓝翼宝贝-Minecraft服务器,我的世界蓝翼宝贝,MOD教程</title>
-    <meta name="keywords"
-        content="史蒂夫的奇妙冒险,Minecraft史蒂夫的奇妙冒险,史蒂夫的奇妙冒险服务器,Minecraft史蒂夫的奇妙冒险,史蒂夫的奇妙冒险服务器,mc服务器,我的世界服务器,我的世界史蒂夫的奇妙冒险,minecraft服务器" />
-    <meta name="description" content="Minecraft蓝翼宝贝是一个主打可玩性的服务器。" />
-    <meta name="author" content="史蒂夫的奇妙冒险工作室" />
+    <title>MC机械创世-chat_rule</title>
     <link rel="shortcut icon" href="favicon.ico">
-    <script src="js/jquery.min_4.js"></script>
-    <script src="js/bootstrap.min_4.js"></script>
-    <link href="css/bootstrap.min_4.css" rel="stylesheet">
-    <link href="css/buttons.min_4.css" rel="stylesheet">
-    <link href="css/font-awesome.min_4.css" rel="stylesheet">
-    <link href="css/main_4.css" rel="stylesheet">
+    <script src="js/jquery.min_6.js"></script>
+    <script src="js/bootstrap.min_6.js"></script>
+    <link href="css/bootstrap.min_6.css" rel="stylesheet">
+    <link href="css/buttons.min_6.css" rel="stylesheet">
+    <link href="css/font-awesome.min_6.css" rel="stylesheet">
+    <link href="css/main_6.css" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target="#navbar-nav">
@@ -25,14 +20,14 @@
             <div class="navbar-header"><button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#navlist" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span
                         class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a
-                    class="navbar-brand" href="/" role="gun">史蒂夫的奇妙冒险</a></div>
+                    class="navbar-brand" href="/" role="gun">MC机械创世</a></div>
             <div class="collapse navbar-collapse" id="navlist">
                 <ul class="nav navbar-nav" role="tablist">
                     <li class="nav-item"><a class="nav-link" href="/">首页</a></li>
                     <li class="nav-item"><a class="nav-link" href="/articleList">最新动态</a></li>
                     <li class="nav-item"><a class="nav-link" href="/#clogin">客户端</a></li>
                     <li class="nav-item"><a class="nav-link" href="/#qqgroup">加入QQ群</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/mod">模组</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/plugins.html">插件</a></li>
                     <li class="nav-item"><a class="nav-link" href="/tese">特色</a></li>
                 </ul>
             </div>
@@ -42,50 +37,63 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 id="title">世界维度</h1>
+                    <h1 id="title">QQ群玩家规定</h1>
                 </div>
             </div>
         </div>
     </section>
     <section class="container-fluid" id="word">
-        <div class="container text-center">
+        <div class="container box">
             <div class="row">
-                <div class="col-md-12">
-                    <h1>维度</h1>
-                    <p>Minecraft史蒂夫的奇妙冒险服务器共有<b>10</b>个不同的世界(10个普通世界)。</p>
-                    <hr color="#fff">
+                <div class="col-md-12 text-center">
+                    <h3>QQ群玩家规定</h3>
+                    <p>于<b>2023/1/20成立</b></p>
+                    <hr>
                     </hr>
                 </div>
-                <!--<div class="col-md-6"><div class="worldbox"><img class="img-responsive"src="picture/ms_1.jpg"/><h1>暮色森林</h1>一个没有昼夜的森林世界。</div></div>-->
-                <div class="col-md-6">
-                    <div class="worldbox"><img class="img-responsive" src="picture/kc_1.jpg" />
-                        <h1>精灵世界</h1>一个放大的精灵世界(或者说全是精灵)。
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="worldbox"><img class="img-responsive" src="picture/sc.jpg" />
-                        <h1>生存世界</h1>主要的世界，一切都从这里开始。
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="worldbox"><img class="img-responsive" src="picture/zc.jpg" />
-                        <h1>主城</h1>商城、传送点、P♂Y交易，一切都聚集在这里。
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="worldbox"><img class="img-responsive" src="picture/zy.jpg" />
-                        <h1>资源世界</h1>不用考虑环境保护，尽情的砍吧！
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="worldbox"><img class="img-responsive" src="picture/dy.jpg" />
-                        <h1>地狱</h1>一片姨妈红的维度。
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="worldbox"><img class="img-responsive" src="picture/md.jpg" />
-                        <h1>末路之地</h1>我为什么要来这种地方...
-                    </div>
+                <div class="col-md-12 font">
+                    <ol>
+                        <li>禁止发送&泄露成员隐私信息：包括但不限于，群内成员的电话号码/身份证号/照片等。如群内发隐私信息，第一次管理提醒撤回，不撤回禁言12小时，多次发隐私信息，按本条例极端处罚规则拉入黑名单&移出处理。</li>
+                      
+                        <li>群名片必须按照顶置公告格式请勿将名片修改为类似“[文件]小明与狗.mp4/13岁少女初**.avi”这样含有敏感词汇的名字。群名片禁止侮辱他人，名片也不能太长。进行修改。昵称禁止使用敏感或违规内容（包括但不限于 国家领导人姓名、人身攻击内容、诋毁群成员）；不建议使用会影响他人的昵称（如“QQ红包”）。请及时修改群名片，不修改群名片将会被踢出群；有问题的群名片，管理组会提醒修改，不修改将会被踢出群。 
+真的栓Q，管理需要保证1周中至少上线1次并发送截图至QQ群。 </li>
+
+                        <li>禁止恶意刷屏：包括但不限于，多次发送相似内容或无意义、空白内容，无特殊情况发起QQ电话，发起无意义投票。 
+严禁大量发送厘米秀信息，两人互相斗厘米秀视为斗图，单人发厘米秀超过2条视为刷屏。如发生，少量刷屏群者内禁言1小时起，严重情况者群内禁言12小时起。无特殊情况或未向群主、管理申请而发起群通话、群视频者将会被踢出群。 </li>
+
+                        <li>禁止可疑伸手党：包括但不限于，拉票、点赞、求红包、推广。违者群内禁言1小时起，严重情况移出群。遇到伸手党请回复“百度/官网/MCBBS/ZUIMC”。死缠不放者AT管理就对了。  </li>
+
+                        <li>禁止任何可疑和问题链接：包括但不限于，一般链接、超短链，不安全来源应用分享、网页分享，空间分享、二维码。正常链接管理员验证无问题后可放行。如为问题链接，违者群内禁言1天起或踢出群。</li> 
+
+                        <li>群内禁止任何交易：包括但不限于，刷钻、刷Q币、刷枪、刷道具、有偿的实物交易。违者群内禁言1天起，严重情况者移出群，最高拉入加群黑名单。 </li>
+
+                        <li>禁止发口令红包。如发生，发口令红包者第一次禁言7天、第二次禁言30天；抢口令红包者禁言1天；严重情况发或抢者都可移出群。但允许群管理员使用口令红包测试外挂。 </li>
+
+                        <li>禁止吵架、骂战、引战、黄图、低俗字词。 
+许可范围内的争论仅包含讲道理这一种方式。不知道什么是讲道理的话——“骂人不含脏字，让人心服口服” 。如发生，参与者视情况群内禁言1小时起，严重情况者拉入黑名单。  </li>
+
+                        <li>禁止非法谈论国家政治、宗教信仰、民族矛盾、种族歧视、地域歧视、性别歧视等内容。如发生，发起者群内禁言12小时起，严重情况者移出群。 </li>
+
+
+
+                        <li>禁止恶意人身攻击、谈论涉及侵犯他人版权及涉嫌违反国家法律法规的内容。如发生，群内人身攻击者禁言1天起，恶意人身攻击者禁言7天起。一般侵权行为，管理组以提醒为主；严重的侵权行为，将会被踢出群，最高可论坛永久禁访。违反国家法律法规的行为将会被踢出群，并提交相关证据至网警，同时拉入加群黑名单。 </li>
+
+<li>禁止发布si妈话语。违者群内禁言1天起，严重情况者移出群，最高拉入加群黑名单。 </li>
+                        <li>禁止散布阴谋论、恶意造谣。无论你是小学生/中学生/大学生还是已经毕业的成年人，都应该有正确的判断标准，明显虚假的“XXX与外国人斗气”“XXX今天生日，转发送QQ等级”“我刚刚获得了200Q币！”“iPhone把钓鱼岛划给日本”消息憋在心里就好，就不要发到群里刺激大家的眼睛了。谣言及带有误导性的内容（玩梗除外，开玩笑看群内各位大佬和管理员的心情）也不行。 如发生，第一次在线管理组进行辟谣和提醒或警告，第二次直接移出群，情节严重的拉入在线黑名单。 </li>
+                        <li>禁止盗用管理人员头像、昵称引起混淆的，或使用国家领导人照片做头像。 如发生第一次管理组将提醒修改并在风控系统进行记录，第二次直接踢出群。 </li>
+                        <li>未经管理员允许，群内禁止以任何形式引导其他用户进入非官方群。如发生，第一次禁言1小时起，第二次踢出群。</li>
+                        <li>禁止使用自动抢红包外挂。 </li>
+                        <li>禁止发送恶意xml代码类消息（例如网警、假消息、假红包）。一经发现直接禁言3天。 </li>
+                        <li>禁止被禁言后未经管理、群主同意擅自退群并重新加群。违者禁言30天。其他惩罚由管理、群主规定。</li>
+                        <li>禁止任何误导他人的行为。不会的问题乖乖看别人答，请不要误导他人。 
+科普/教程很好，但是请务必保证其准确性和可读性。胡乱教、闪瞎眼的东西也按照此条处理 。常见的问题请尽量直接回答链接、地址或复制粘贴答语。毕竟，一来这样很省力，二来这样能保证语言规范（但首先你要从正常的地方复制粘贴），三来它能保证你不会在手抖、头晕、脑抽筋的情况下回答错误的答案。 违者第一次警告，第二次禁言10分钟+。  </li>
+                        <li>禁止在群内过度装b、炫耀。炫耀适度，记住人外有人天外有天，尤其是在这里你装的逼随时可能成为你打开新世界大门的钥匙（和打到你脸上的巴掌） 。违者第一次警告，第二次禁言10分钟以上。 </li>
+                        <li>禁止讨论“有损计算机系统安全”相关内容及其他未列出但涉及《中华人民共和国刑法》《中华人民共和国宪法》《中华人民共和国计算机著作权保护法》《中华人民共和国治安管理条例》的内容 政治敏感内容(不包括《思想品德》《政治》《历史与政治》《道德与法制》等课本内容及虫合，除学术讨论以外）。违者群内禁言1天起，严重情况移出群，最高拉入加群黑名单。 </li>
+                        <li>禁止恶俗、低级趣味内容 。违者群内禁言1天起，严重情况移出群，最高拉入加群黑名单。 </li>
+                        <li>禁止提出会使他人误导的问题。比如“更新会删档”、“服务器是不是会崩”、“服务器熊孩子是不是很多”、“存档会不会消失”、“服主跑路了怎么办”之类的明显会让他人产生误导的问题。 违者群内禁言10分钟起，第二次禁言1小时以上。</li>
+                        <li>禁止冒充他人（包括游戏id）。例“我是XXX管理员”、“XX腐竹”、“腐竹”、“op”、“admin”之类明显误导他人的名称 。违者群内禁言1天起，第二次1周起，第三次30天，第四次就无了。  </li>
+                    </ol>
+
                 </div>
             </div>
         </div>
@@ -108,7 +116,7 @@
                     <div class="widget">
                         <h4 class="title">关于服务器</h4>
                         <div class="content tag-cloud">
-                            Minecraft史蒂夫的奇妙冒险服务器成立于2019年，前身为无忧世界服务器。服主为【fengyijun】，服务器技术维护为【基泥苔霉】。服务器为史蒂夫的奇妙冒险工作室旗下。服务器主打黑科技以及可玩性，拥有丰富的MOD和稳定的服务器架构，能够保证百人在线不卡。
+                            Minecraft史蒂夫的奇妙冒险成立于2022年。服主为【fengjijun】，服务器技术维护为【基泥苔霉】。服务器为史蒂夫的奇妙冒险旗下。服务器主打黑科技以及可玩性，拥有丰富的MOD和稳定的服务器架构，能够保证百人在线不卡。
                         </div>
                     </div>
                     <div class="widget">
@@ -132,15 +140,8 @@
             </div>
         </div>
     </footer>
-    <div class="copyright">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12"><span>Copyright©<a href=" ">史蒂夫的奇妙冒险工作室</a></span></div>
-            </div>
-        </div>
-    </div>
-    <script src="js/bootstrap.min_4.js"></script>
-    <script src="js/main_4.js"></script>
+    <script src="js/bootstrap.min_6.js"></script>
+    <script src="js/main_6.js"></script>
     <script>var _hmt = _hmt || []; (function () { var hm = document.createElement("script"); hm.src = "https://hm.baidu.com/hm.js?971ec26c239614cb860dd23c384cd840"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s) })();</script>
 </body>
 
